# spellbound-arcanist

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  TODO.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
Source/Presets/Factory/: 001_CelestialDrift.xml  002_HeavenlyGlow.xml  003_CloudNine.xml  004_Starlight.xml  005_Nebula.xml  006_InfiniteSpace.xml  007_MidnightCathedral.xml  008_OminousSwell.xml  009_CinematicStrings.xml  010_DeepMystery.xml  011_ShadowedDream.xml  012_RichStrings.xml  013_VelvetWarmth.xml  014_ChoirShimmer.xml  015_GoldenHour.xml  016_OrganicBloom.xml  017_CrystalBell.xml  018_SparklingSunrise.xml  019_LuminousPad.xml  020_PrismaticGlow.xml  021_MorphingLandscape.xml  022_BreathingPulse.xml  023_SpiralingCosmos.xml  024_VintageSynthPad.xml  025_BladeRunnerNight.xml  026_AlphaCentauri.xml  027_CS80Strings.xml  028_EpicCinema.xml  029_StringMachine.xml  030_OceanicSweep.xml  031_CosmicHorizon.xml  032_ElectricNight.xml  033_LaserHarp.xml  034_GMFantasia.xml  035_GMCrystal.xml  036_GMAtmosphere.xml  037_GMBrightness.xml  038_GMEchoes.xml  039_GMSciFi.xml  040_GMVoice.xml  (+2 more)
Source/Synthesis/: Envelope.cpp  Envelope.h  Filter.cpp  Filter.h  LFO.cpp  LFO.h  Oscillator.cpp  Oscillator.h  Voice.cpp  Voice.h
Source/UI/: ArcanistLookAndFeel.cpp  ArcanistLookAndFeel.h  LedButton.h  PM0LookAndFeel.cpp  PM0LookAndFeel.h
docs/superpowers/plans/: 2026-06-18-preset-system-implementation.md
docs/superpowers/specs/: 2026-06-18-preset-system-design.md
scripts/: install.sh  uninstall.sh
tools/: analyze_sample.py  update_presets_osc2.py
